--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <title>Suzuki</title>
   <h1>Suzuki Estilete</h1>
   <h1>
-<img src="suzukiestilete.png">
+<img sarc="suzukiestilete.png">
   </h1>
 
 
