--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
+  <body>
   <title>Suzuki</title>
   <h1>Suzuki Estilete</h1>
   <h1>
-<img sarc="suzukiestilete.png">
+<img src="suzukiestilete.png">
   </h1>
 
 
@@ -19,7 +20,7 @@
         }
     </style>
 </head>
-<body>
+
 
     <button onclick="mostrarImagen()">Suzuki buton</button>
     
