--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>Suzuki</title>
   <h1>Suzuki Estilete</h1>
   <h1>
-<img src="suzukiestilete.png">
+<img src="suzukiestilet.png">
   </h1>
 <h1>
     <button onclick="mostrarImagen()">Suzuki buton</button>
