--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Suzuki</title>
+    <style>
+        #imagenContainer {
+            display: none;
+        }
+    </style>
+</head>  
   <body>
   <title>Suzuki</title>
   <h1>Suzuki Estilete</h1>
