--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <h1>
     <button onclick="mostrarImagen()">Spawnear Suzuki Estilete</button>
     
-    <div id="imagenContainer">
+    <div id="imagencContainer">
         <img src="suzukiestilete.png" alt="Imagen" width="300" height="200">
     </div>
 
     <script>
         function mostrarImagen() {
-            var imagenContainer = document.getElementById("imagenContainer");
+            var imagenContainer = document.getElementById("imagencContainer");
             imagenContainer.style.display = "block";
         }
     </script>
