--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mostrar Imagen al Clic</title>
+    <title>Suzuki Estilete</title>
     <style>
         .imagenContainer {
             display: none;
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-
+<h1>Suzuki estilete</h1>
     <button onclick="mostrarImagen('Suzuki Estilete')">Mostrar Imagen 1</button>
     <button onclick="mostrarImagen('Suzuki Estilete de navidad')">Mostrar Imagen 2</button>
     
