--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div id="imagen2Container" class="imagenContainer">
-        <img src="Suzukiestiletec.png" alt="Imagen 2" width="300" height="200">
+        <img src="suzukiestiletec.png" alt="Imagen 2" width="300" height="200">
     </div>
 
     <script>
