--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     </style>
 </head>
 <body>
-<h1>Suzuki estilete</h1>
-    <button onclick="mostrarImagen('Suzuki Estilete')">Mostrar Imagen 1</button>
-    <button onclick="mostrarImagen('Suzuki Estilete de navidad')">Mostrar Imagen 2</button>
+<h1>Suzuki Estilete Spawner</h1>
+    <button onclick="mostrarImagen('imagen1')">Suzuki Estilete</button>
+    <button onclick="mostrarImagen('imagen2')">Suzuki Estilete de Navidad</button>
     
     <div id="imagen1Container" class="imagenContainer">
         <img src="suzukiestilete.png" alt="Imagen 1" width="300" height="200">
