--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <img src="suzukiestiletec.png" alt="Imagen 2" width="300" height="200">
     </div>
 
-    <button id="modoBtn" onclick="toggleModo()">Cambiar Modo</button>
+    <button id="modoBtn" onclick="toggleModo()">Oscuro modo</button>
 
     <script>
         function mostrarImagen(id) {
