--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>Suzuki Estilete</title>
     <style>
         body {
-            background-color: #fff; /* Color de fondo por defecto (modo claro) */
-            color: #000; /* Color de texto por defecto (modo claro) */
+            background-color: #000; 
+            color: #fff; 
         }
 
         .imagenContainer {
             display: none;
         }
 
-        /* Estilos para el botón de modo claro/oscuro */
+    
         #modoBtn {
             margin-top: 10px;
             padding: 8px;
@@ -35,7 +35,7 @@
         <img src="suzukiestiletec.png" alt="Imagen 2" width="300" height="200">
     </div>
 
-    <button id="modoBtn" onclick="toggleModo()">Oscuro modo</button>
+    <button id="modoBtn" onclick="toggleModo()">Flashbang</button>
 
     <script>
         function mostrarImagen(id) {
