--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="#FFC0CB" data-react-helmet="true" name="theme-color" />
+<meta property="og:title" content="Suzuki Estilete" />
+<meta property="og:image" content="suzukiestilete.png" />
     <title>Suzuki Estilete</title>
     <style>
         body {
