--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta content="#FFC0CB" data-react-helmet="true" name="theme-color" />
 <meta property="og:title" content="Suzuki Estilete" />
 <meta property="og:image" content="https://suzukiestilete.online/suzukiestilete.png" />
+    <meta property="og:description" content="Suzuki Estilete oficial website made by Suzuki Estilete" />
     <title>Suzuki Estilete</title>
     <style>
         body {
