--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="#FFC0CB" data-react-helmet="true" name="theme-color" />
 <meta property="og:title" content="Suzuki Estilete" />
-<meta property="og:image" content="https://suzukiestilete.online/suzukiestilete.png" />
+<meta property="og:image" content="https://cdn.discordapp.com/avatars/500455994955137034/e0e93f56a214d15e8b3c220e7f7554a8.png?size=1024&format=gif" />
     <meta property="og:description" content="Suzuki Estilete oficial website made by Suzuki Estilete" />
     <title>Suzuki Estilete</title>
     <style>
