--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <h1>Suzuki Estilete Spawner</h1>
     <button onclick="mostrarImagen('imagen1')">Suzuki Estilete</button>
     <button onclick="mostrarImagen('imagen2')">Suzuki Estilete de Navidad</button>
+    <button onclick="mostrarImagen('imagen3')">Suzuki Estilete de Navidad</button>
     
     <div id="imagen1Container" class="imagenContainer">
         <img src="suzukiestilete.png" alt="Imagen 1" width="300" height="200">
@@ -37,6 +38,10 @@
 
     <div id="imagen2Container" class="imagenContainer">
         <img src="suzukiestiletec.png" alt="Imagen 2" width="300" height="200">
+    </div>
+
+     <div id="imagen3Container" class="imagenContainer">
+        <img src="suzukiestiletep.png" alt="Imagen 3" width="300" height="200">
     </div>
 
     <button id="modoBtn" onclick="toggleModo()">Flashbang</button>
