--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h1>Suzuki Estilete Spawner</h1>
     <button onclick="mostrarImagen('imagen1')">Suzuki Estilete</button>
     <button onclick="mostrarImagen('imagen2')">Suzuki Estilete de Navidad</button>
-    <button onclick="mostrarImagen('imagen3')">Suzuki Estilete de Navidad</button>
+    <button onclick="mostrarImagen('imagen3')">Suzuki Estilete de Pascua</button>
     
     <div id="imagen1Container" class="imagenContainer">
         <img src="suzukiestilete.png" alt="Imagen 1" width="300" height="200">
