--- a/minecraft.html
+++ b/minecraft.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Minecraft</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin-top: 50px;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            font-size: 18px;
+            color: #666;
+        }
+        .button {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+            color: white;
+            background-color: #007BFF;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        .button:hover {
+            background-color: #0056b3;
+        }
+    </style>
+</head>
+<body>
+
+    <h1>Servidor de minecraft descargar mods</h1>
+    <p>Dale al boton para descargar los mods</p>
+    <a class="button" href="https://mega.nz/file/TksXFSgY#c6IqLylTA6miBRi3F1X5BTqVPUUVVvqAd0gez1_MPSg" target="_blank">Descargar mods</a>
+
+</body>
+</html>
 
