--- a/minecraft.html
+++ b/minecraft.html
@@ -35,8 +35,8 @@
 </head>
 <body>
 
-    <h1>Servidor de minecraft descargar mods</h1>
-    <p>Dale al boton para descargar los mods</p>
+    <h1>Servidor de minecraft descargar mods si mods</h1>
+    <p>Dale al boton para descargar los mods porque los mods molan, son la hostia no dudes en darle al boton</p>
     <a class="button" href="https://mega.nz/file/TksXFSgY#c6IqLylTA6miBRi3F1X5BTqVPUUVVvqAd0gez1_MPSg" target="_blank">Descargar mods</a>
 
 </body>
