--- a/minecraft.html
+++ b/minecraft.html
@@ -38,7 +38,7 @@
     <h1>Servidor de minecraft descargar mods si mods</h1>
     <p>Dale al boton para descargar los mods porque los mods molan, son la hostia no dudes en darle al boton</p>
     <a class="button" href="https://mega.nz/file/TksXFSgY#c6IqLylTA6miBRi3F1X5BTqVPUUVVvqAd0gez1_MPSg" target="_blank">Descargar mods</a>
-
+<div align=center><a href='https://www.counter12.com'><img src='https://www.counter12.com/img-0bCWY0ZYC5Y43xcy-24.gif' border='0' alt='contador gratuito de visitas'></a><script type='text/javascript' src='https://www.counter12.com/ad.js?id=0bCWY0ZYC5Y43xcy'></script></div>
 </body>
 </html>
 
