--- a/minecraft.html
+++ b/minecraft.html
@@ -39,7 +39,7 @@
     <p>Dale al boton para descargar los mods porque los mods molan, son la hostia no dudes en darle al boton</p>
     <a class="button" href="https://mega.nz/file/TksXFSgY#c6IqLylTA6miBRi3F1X5BTqVPUUVVvqAd0gez1_MPSg" target="_blank">Descargar mods</a>
      <p>Contador de visualizaciones de la pagina</p>
-<div align=center><a href='https://www.counter12.com'><img src='https://www.counter12.com/img-0bCWY0ZYC5Y43xcy-24.gif' border='0' alt='contador gratuito de visitas'></a><script type='text/javascript' src='https://www.counter12.com/ad.js?id=0bCWY0ZYC5Y43xcy'></script></div>
+<div align="center"><img src="https://www.counter12.com/img-0bCWY0ZYC5Y43xcy-24.gif" border="0" alt="contador de visualizaciones de la pagina"></div>
 </body>
 </html>
 
