--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <button onclick="mostrarImagen('imagen1')">Suzuki Estilete</button>
     <button onclick="mostrarImagen('imagen2')">Suzuki Estilete de Navidad</button>
     <button onclick="mostrarImagen('imagen3')">Suzuki Estilete de Pascua</button>
+    <button onclick="mostrarImagen('imagen4')">Suzuki Estilete de Cumpleaños</button>
     
     <div id="imagen1Container" class="imagenContainer">
         <img src="suzukiestilete.png" alt="Imagen 1" width="300" height="200">
@@ -42,6 +43,10 @@
 
      <div id="imagen3Container" class="imagenContainer">
         <img src="suzukiestiletep.png" alt="Imagen 3" width="300" height="200">
+    </div>
+
+    <div id="imagen3Container" class="imagenContainer">
+        <img src="suzukiestileteb.png" alt="Imagen 4" width="300" height="200">
     </div>
 
     <button id="modoBtn" onclick="toggleModo()">Flashbang</button>
