--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <button onclick="mostrarImagen('imagen2')">Suzuki Estilete de Navidad</button>
     <button onclick="mostrarImagen('imagen3')">Suzuki Estilete de Pascua</button>
     <button onclick="mostrarImagen('imagen4')">Suzuki Estilete de Cumpleaños</button>
+    <button onclick="mostrarImagen('imagen5')">Suzuki Estilete de Otoño</button>
     
     <div id="imagen1Container" class="imagenContainer">
         <img src="suzukiestilete.png" alt="Imagen 1" width="300" height="200">
@@ -47,6 +48,10 @@
 
     <div id="imagen4Container" class="imagenContainer">
         <img src="suzukiestileteb.png" alt="Imagen 4" width="300" height="200">
+    </div>
+
+    <div id="imagen5Container" class="imagenContainer">
+        <img src="suzukiestileteo.png" alt="Imagen 5" width="300" height="200">
     </div>
 
     <button id="modoBtn" onclick="toggleModo()">Flashbang</button>
