--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <button onclick="mostrarImagen('imagen3')">Suzuki Estilete de Pascua</button>
     <button onclick="mostrarImagen('imagen4')">Suzuki Estilete de Cumpleaños</button>
     <button onclick="mostrarImagen('imagen5')">Suzuki Estilete de Otoño</button>
+    <button onclick="mostrarImagen('imagen6')">Suzuki Estilete de Halloween</button>
     
     <div id="imagen1Container" class="imagenContainer">
         <img src="suzukiestilete.png" alt="Imagen 1" width="300" height="200">
@@ -52,6 +53,10 @@
 
     <div id="imagen5Container" class="imagenContainer">
         <img src="suzukiestileteo.png" alt="Imagen 5" width="300" height="200">
+    </div>
+
+     <div id="imagen6Container" class="imagenContainer">
+        <img src="suzukiestileteh.png" alt="Imagen 6" width="300" height="200">
     </div>
 
     <button id="modoBtn" onclick="toggleModo()">Flashbang</button>
