--- a/minecraft.html
+++ b/minecraft.html
@@ -37,7 +37,7 @@
 
     <h1>Servidor de minecraft descargar mods si mods</h1>
     <p>Dale al boton para descargar los mods porque los mods molan, son la hostia no dudes en darle al boton</p>
-    <a class="button" href="https://mega.nz/file/ql8CGDxK#ECideDI9u9G--ZwlCobqT2o6vBPmPpQRlKBdl4aTN7U" target="_blank">Descargar mods</a>
+    <a class="button" href="https://mega.nz/file/StsU3a4L#dUo25QtKY0a_bgCi7msMjBqD_qk9ekFLDelG6_ShNo0" target="_blank">Descargar mods</a>
      <p>Contador de visualizaciones de la pagina</p>
 <div align="center"><img src="https://www.counter12.com/img-0bCWY0ZYC5Y43xcy-24.gif" border="0" alt="contador de visualizaciones de la pagina"></div>
 </body>
