--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
 <body>
     <h1>Suzuki Estilete Spawner</h1>
     <button onclick="mostrarImagen('imagen1')">Suzuki Estilete</button>
-    <button onclick="mostrarImagen('imagen2')">Suzuki Estilete de Navidad</button>
-    <button onclick="mostrarImagen('imagen3')">Suzuki Estilete de Pascua</button>
-    <button onclick="mostrarImagen('imagen4')">Suzuki Estilete de Cumpleaños</button>
-    <button onclick="mostrarImagen('imagen5')">Suzuki Estilete de Otoño</button>
-    <button onclick="mostrarImagen('imagen6')">Suzuki Estilete de Halloween</button>
+    <button onclick="mostrarImagen('imagen2')">Suzuki Estilete de Navidad 2023</button>
+    <button onclick="mostrarImagen('imagen3')">Suzuki Estilete de Pascua2024</button>
+    <button onclick="mostrarImagen('imagen4')">Suzuki Estilete de Cumpleaños2024</button>
+    <button onclick="mostrarImagen('imagen5')">Suzuki Estilete de Otoño2024</button>
+    <button onclick="mostrarImagen('imagen6')">Suzuki Estilete de Halloween2024</button>
+    <button onclick="mostrarImagen('imagen7')">Suzuki Estilete de Navidad 2024</button>
     
     <div id="imagen1Container" class="imagenContainer">
         <img src="suzukiestilete.png" alt="Imagen 1" width="300" height="200">
@@ -57,6 +58,10 @@
 
      <div id="imagen6Container" class="imagenContainer">
         <img src="suzukiestileteh.png" alt="Imagen 6" width="300" height="200">
+    </div>
+
+     <div id="imagen7Container" class="imagenContainer">
+        <img src="suzukiestiletec3.png" alt="Imagen 7" width="300" height="200">
     </div>
 
     <button id="modoBtn" onclick="toggleModo()">Flashbang</button>
